# swagger_output.json
@@ -972,6 +972,79 @@
         ]
       }
     },
+    "/api/member/getUserCount": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "summary": "取得會員資料",
+        "description": "取得會員資料",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "取得會員資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "644cce67945042a407ed1c21"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "z2@gmail.com"
+                    },
+                    "nickName": {
+                      "type": "string",
+                      "example": "使用者暱稱"
+                    },
+                    "profilePic": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-04-29T07:59:35.033Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2023-04-29T08:08:39.850Z"
+                    },
+                    "__v": {
+                      "type": "number",
+                      "example": 0
+                    },
+                    "birthday": {
+                      "type": "string",
+                      "example": "2022-02-03T00:00:00.000Z"
+                    },
+                    "phoneNumber": {
+                      "type": "string",
+                      "example": "0912345678"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
     "/api/member/updateUser": {
       "post": {
         "tags": [
@@ -1322,6 +1395,102 @@
             "name": "id",
             "in": "query"
           },
+          {
+            "name": "isRelease",
+            "description": "是否上檔",
+            "type": "boolean",
+            "default": true,
+            "in": "query"
+          },
+          {
+            "name": "name",
+            "description": "電影名稱模糊搜尋",
+            "type": "string",
+            "default": "鋼鐵人",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "回傳範例資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number",
+                        "example": 1
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "鋼鐵人"
+                      },
+                      "imgs": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "level": {
+                        "type": "number",
+                        "example": 0
+                      },
+                      "desc": {
+                        "type": "string",
+                        "example": "string"
+                      },
+                      "time": {
+                        "type": "number",
+                        "example": 90
+                      },
+                      "actors": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "videos": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "status": {
+                        "type": "number",
+                        "example": 1
+                      },
+                      "release_data": {
+                        "type": "string",
+                        "example": "yymmdd-hms"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/movie/getMovieCount": {
+      "get": {
+        "tags": [
+          "Movie"
+        ],
+        "summary": "獲取電影列表",
+        "description": "獲取電影列表",
+        "parameters": [
           {
             "name": "isRelease",
             "description": "是否上檔",
@@ -2189,6 +2358,68 @@
             "name": "orderId\r",
             "in": "query"
           },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "screenId": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "回傳範例資料",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "自行填寫"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "date": {
+                        "type": "string",
+                        "example": "5/20"
+                      },
+                      "screenId": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/order/getOrderCount": {
+      "get": {
+        "tags": [
+          "Screen"
+        ],
+        "summary": "所選擇電影可上映的日期",
+        "description": "傳入screenId，來得到該電影的可訂票日期",
+        "parameters": [
           {
             "name": "obj",
             "in": "body",
